--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ before_install:
   - pip install --user codecov
 
 script:
-  - ./gradlew build --stacktrace --info --debug --no-daemon
+  - ./gradlew build --stacktrace --info --debug
 
 after_success:
+  - ./gradlew jacocoTestReport coveralls --stacktrace --info --debug
+  - ./gradlew cobertura coveralls --stacktrace --info --debug
   - codecov
-  - ./gradlew jacocoTestReport coveralls
+  - ./gradlew --stop
