--- a/build.gradle
+++ b/build.gradle
@@ -105,8 +105,11 @@ apply plugin: 'java'
 apply plugin: 'jacoco'
 
 plugins {
+    id 'net.saliman.cobertura' version '2.3.1'
     id 'com.github.kt3k.coveralls' version '2.6.3'
 }
+
+id 'net.saliman.cobertura' version '2.3.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
