--- a/build.gradle
+++ b/build.gradle
@@ -112,10 +112,13 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    mavenLocal()
+    ivy { System.getProperty("user.home") + '/.ivy2' }
     maven { url "https://jitpack.io" }
 }
 
 dependencies {
+    compile 'com.github.JCTools.JCTools:jctools-core:-SNAPSHOT'
     compile 'com.github.ObjectLayout:ObjectLayout:-SNAPSHOT'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
