--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,7 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
     mavenLocal()
-    ivy { System.getProperty("user.home") + '/.ivy2' }
+    ivy { url System.getProperty("user.home") + '/.ivy2' }
     maven { url "https://jitpack.io" }
 }
 
