--- a/build.gradle
+++ b/build.gradle
@@ -109,10 +109,12 @@ plugins {
     id 'com.github.kt3k.coveralls' version '2.6.3'
 }
 
+apply plugin: 'maven'
+
+defaultTasks 'clean', 'build', 'jar', 'install'
+
 group 'com.sakrio'
 version '0.1.0-SNAPSHOT'
-
-defaultTasks 'clean', 'build', 'jar'
 
 task wrapper(type: Wrapper) {
     gradleVersion = '3.0'
