--- a/build.gradle
+++ b/build.gradle
@@ -187,6 +187,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+cobertura.coverageFormats = ['html', 'xml']
+
+cobertura.coverageSourceDirs = sourceSets.main.groovy.srcDirs
+
 jacocoTestReport {
     reports {
         xml.enabled true
@@ -287,7 +291,7 @@ artifacts {
 }
 
 signing {
-    required { gradle.taskGraph.hasTask("uploadArchives") }
+    required { gradle.taskGraph.hasTask("uploadArchives") && project.properties.containsKey('signing.keyId') }
     sign configurations.archives
 }
 
