--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,7 @@ plugins {
     id 'java'
     id 'jacoco'
     id 'com.github.kt3k.coveralls' version '2.6.3'
+    id 'net.saliman.cobertura' version '2.3.1'
     id 'com.jfrog.bintray' version '1.7'
     id 'com.jfrog.artifactory' version '4.4.0'
     id 'co.riiid.gradle' version '0.4.2'
@@ -186,8 +187,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.ObjectLayout:ObjectLayout:854efb835f'
-    compile 'com.github.MicroTrader:Collections:-SNAPSHOT'
+    compile group: 'org.bytedeco', name: 'javacpp', version: '1.2.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
