--- a/build.gradle
+++ b/build.gradle
@@ -187,6 +187,9 @@ repositories {
 }
 
 dependencies {
+    compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC2'
+    compile 'com.github.JCTools.JCTools:jctools-core:1.2.1'
+    compile 'it.unimi.dsi:fastutil:7.0.13'
     compile group: 'org.bytedeco', name: 'javacpp', version: '1.2.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
