--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,7 @@ plugins {
     id 'co.riiid.gradle' version '0.4.2'
 }
 
+apply plugin: 'scala'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'ivy-publish'
@@ -170,7 +171,7 @@ ext {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.0'
+    gradleVersion = '3.1'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
@@ -187,12 +188,14 @@ repositories {
 }
 
 dependencies {
-    compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC2'
-    compile 'com.github.JCTools.JCTools:jctools-core:1.2.1'
-    compile 'it.unimi.dsi:fastutil:7.0.13'
-    compile group: 'org.bytedeco', name: 'javacpp', version: '1.2.4'
+    zinc 'com.typesafe.zinc:zinc:0.3.11'
+
+    scalaCompilerPlugin 'org.scalamacros:paradise_2.11.8:2.1.0'
+
+    compile 'org.scala-lang:scala-library:2.11.8'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.scala-lang:scala-library:2.11.8'
 }
 
 cobertura.coverageFormats = ['html', 'xml']
